--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,6 @@
   </head>
   <body>
     <h1> Which country is more American? </h1>
-    <div id="result">Loading...</div>
     <div id="countryOne">
     <figure>
       <img src='https://upload.wikimedia.org/wikipedia/commons/2/28/InternetSlowdown_Day.gif'
@@ -36,9 +35,12 @@
     };
     console.log("Doing the thing.");
     $(document).ready(function() {
-      $.getJSON('/main', function(data) {
-        console.log("updating countries");
+      $.getJSON('/main?countryID=' + countryOneID, function(data) {
+        console.log("updating country one");
         $('#countryOne').html(makeFigure(data));
+      });
+      $.getJSON('/main?countryID=' + countryTwoID, function(data) {
+        console.log("updating country two");
         $('#countryTwo').html(makeFigure(data));
       });
     });
