--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -77,7 +77,8 @@
       <figcaption>Loading</figcaption>
     </figure>
     </div>
-    <button type="button" id="skipButton" style="height:30px;width:200px">Skip!</button>
+    <button type="button" id="skipButton" style="height:30px;width:200px">Equally American!</button>
+    <button type="button" id="passButton" style="height:30px;width:200px">Skip!</button>
     <p>Images licensed from the Wikimedia Foundation under a
       <a href="http://creativecommons.org/licenses/by-sa/3.0/">creative commons license.</a>.</p>
     <script>
@@ -146,6 +147,9 @@
       });
       $('#skipButton').click(function() {
           logResult(0, countryOneID, countryTwoID)
+      });
+      $('#passButton').click(function() {
+          nextPair()
       });
     };
 
